<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:visibility="visible">

    <Button
            android:text="@string/vamos_a_lared"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:id="@+id/entrar_red_cliente"
            android:background="#FBFBFB" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible" app:layout_constraintHorizontal_bias="0.514"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_lared"
            android:id="@+id/estas_enred"
            android:textColor="#009688" android:textColorHighlight="#E91E63"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/n_mero_m_vil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelcell"
            android:clickable="false" android:background="#FBFBFB"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/movil"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/movil"
            android:maxLength="10"
            app:layout_constraintStart_toStartOf="@+id/contraseña" android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/passwd" android:textColor="#009688"
            android:shadowColor="#F44336" android:gravity="center"/>
    <TextView
            android:text="@string/contrase_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwd"
            android:background="#FBFBFB"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/contraseña"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/contraseña"
            android:maxLength="15"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/es_cliente"
            android:textColor="#009688" android:gravity="center"/>
    <Button
            android:text="@string/vamos_a_lared"
            android:layout_width="129dp"
            android:layout_height="46dp"
            android:id="@+id/entrar_red_negocio"
            android:background="#FBFBFB" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>
    <TextView
            android:text="@string/donde_tus_compras_se_convierten_en_dinero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msjbienvenida"
            android:textColor="#009688"
            app:layout_constraintTop_toBottomOf="@+id/entrar_red_negocio" android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/eres_nuevo_en_la_red"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:id="@+id/usernew"
            android:textColor="#009688"
            app:layout_constraintTop_toTopOf="@+id/entrar_red_negocio" android:layout_marginTop="179dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/negocio"
            android:layout_marginBottom="180dp"/>
    <Button
            android:text="@string/negocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/negocio"
            android:background="#FBFBFB" android:textColor="#009688"
            android:linksClickable="true"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/usernew"/>
    <Button
            android:text="@string/cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cliente"
            android:background="#FBFBFB" android:textColor="#009688"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/usernew" app:layout_constraintStart_toEndOf="@+id/usernew"/>
    <Switch
            android:text="@string/es_negocio"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:id="@+id/es_negocio" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="@+id/contraseña" android:layout_marginTop="81dp"
            app:layout_constraintBottom_toBottomOf="@+id/msjbienvenida"
            app:layout_constraintEnd_toStartOf="@+id/entrar_red_negocio"
            android:layout_marginBottom="81dp"/>
    <Switch
            android:text="@string/es_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/es_cliente" android:textColor="#009688"
            app:layout_constraintStart_toEndOf="@+id/contraseña" app:layout_constraintEnd_toEndOf="@+id/contraseña"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/entrar_red_negocio"/>
    <Switch
            android:text="@string/olvidaste_tu_contrase_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/olvido_pwd" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>