<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registro_negocio3">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_lared"
            android:id="@+id/estas_enred"
            android:textColor="#009688" android:textColorHighlight="#E91E63"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="21dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginBottom="53dp" app:layout_constraintBottom_toTopOf="@+id/acercade2"/>
    <TextView
            android:text="@string/cu_ntanos_acerca_de_la_ubicaci_n_de_tu_negocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/acercade2" android:textColor="#009688"
            app:layout_constraintTop_toBottomOf="@+id/estas_enred" android:layout_marginBottom="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/label_pais"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrar_neg" android:background="#FBFBFB"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/pa_s"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/label_pais" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/pais" android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/pais"
            android:maxLength="10" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_pais"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="148dp"/>
    <TextView
            android:text="@string/ciudad"
            android:layout_width="167dp"
            android:layout_height="32dp"
            android:id="@+id/label_ciudad" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pais"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="36dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ciudad"
            android:maxLength="10" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_ciudad"
            app:layout_constraintTop_toBottomOf="@+id/label_ciudad"
    />
    <TextView
            android:text="@string/barrio"
            android:layout_width="114dp"
            android:layout_height="34dp"
            android:id="@+id/label_barrio" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ciudad" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/barrio"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="@+id/label_barrio"
            app:layout_constraintTop_toBottomOf="@+id/label_barrio"
    />
    <TextView
            android:text="@string/direcci_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_direccion" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/barrio"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/direccion"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="@+id/label_direccion"
            app:layout_constraintTop_toBottomOf="@+id/label_direccion"/>
    <TextView
            android:text="@string/cargar_foto_de_tu_negocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_foto" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="26dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/direccion"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/label_foto"
            app:layout_constraintTop_toBottomOf="@+id/label_foto"/>
</androidx.constraintlayout.widget.ConstraintLayout>