<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registro_cliente1">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_a_lared"
            android:id="@+id/estas_enred"
            android:textColor="#009688" android:textColorHighlight="#E91E63"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/registrate_en_lared"
            android:layout_width="149dp"
            android:layout_height="22dp"
            android:id="@+id/labelconocercliente1"
            android:clickable="false" android:background="#FBFBFB"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/estas_enred" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Tipo de Documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_tipodoccliente" android:textColor="#009688"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginTop="155dp" android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tipo_doccliente"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="@+id/label_tipodoccliente"
            app:layout_constraintTop_toBottomOf="@+id/label_tipodoccliente"/>
    <TextView
            android:text="@string/n_mero_de_documento_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_numdoccliente" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="26dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tipo_doccliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numdoccliente"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="@+id/label_numdoccliente"
            app:layout_constraintTop_toBottomOf="@+id/label_numdoccliente" android:maxLength="12"/>
    <TextView
            android:text="@string/correo_electr_nico_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_email" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="27dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/numdoccliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_cliente"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="@+id/label_email"
            app:layout_constraintTop_toBottomOf="@+id/label_email"/>
    <TextView
            android:text="@string/contrase_a_cli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_pwd_cliente" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email_cliente"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pwd_cliente"
            android:maxLength="15" android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/label_pwd_cliente"
            app:layout_constraintTop_toBottomOf="@+id/label_pwd_cliente"/>
    <Button
            android:text="@string/continuar_regcli1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cont_regcliente1" android:background="#FBFBFB"
            android:textColor="#009688" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>